--- a/vars.yaml
+++ b/vars.yaml
@@ -2,14 +2,14 @@ cluster_name: "aks-cluster"
 location: "eastus"
 resource_group: "aks-rg"
 dns_prefix: "aks-cluster"
+kubernetes_version: "1.26.6"
 admin_username: "azureuser"
-ssh_key: "~/.ssh/id_rsa.pub"
+ssh_key: "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
 client_id: "{{ lookup('env', 'CLIENT_ID') }}"
 client_secret: "{{ lookup('env', 'CLIENT_SECRET') }}"
-agent_pool_name: "aks-agentpool"
+agent_pool_name: "agentpool"
 agent_pool_count: 2
 agent_pool_vm_size: "Standard_DS2_v2"
 agent_pool_os_type: "Linux"
-environment: "dev"
 owner: "Abdelhadi Omar"
 created_by: "Abdelhadi Omar" 
