--- a/ansible/roles/deploy-app/tasks/main.yaml
+++ b/ansible/roles/deploy-app/tasks/main.yaml
@@ -1,4 +1,9 @@
 ---
+- name: ensure kuberenetes is installed
+  pip:
+    name: kubernetes
+    state: present
+
 - name: ensure namespace is created
   k8s:
     name: hello-world
@@ -12,12 +17,3 @@
     state: present
     definition: "{{ lookup('file', '../kubernetes/app-deployment.yaml') }}"
     kubeconfig: "{{ lookup('env', 'HOME') }}/.kube/config"
-
-- name: ensure hello-world app is deployed
-  local_action: shell kubectl get pods -n hello-world
-  register: output
-  until: output.stdout.find('Running') != -1
-  retries: 10
-  delay: 10
-- debug:
-    msg: "{{ output.stdout }}"
